--- a/Wahyu_Irawan_Saputa_0110225168_UTSFORM12.html
+++ b/Wahyu_Irawan_Saputa_0110225168_UTSFORM12.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Praktikum UTS</title>
-    <link rel="stylesheet" href="UTS.css">
+    <link rel="stylesheet" href="Wahyu_Irawan_Saputa_0110225168_UTSFORM12.css">
 </head>
 <body>
     <h2>Registrasi Kendaraan Anda</h2>
